New theme minimail mistakes

--- a/_posts/2009-06-10-most-useful-visual-studio-2008-keyboard-shortcuts.html
+++ b/_posts/2009-06-10-most-useful-visual-studio-2008-keyboard-shortcuts.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: Most Useful Visual Studio 2008 Keyboard Shortcuts
 date: 2009-06-10 09:50:08.000000000 +01:00
 type: post
