--- a/_posts/2009-06-12-must-have-vs-2008-free-plug-ins-1-style-cop.html
+++ b/_posts/2009-06-12-must-have-vs-2008-free-plug-ins-1-style-cop.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: 'Must have VS 2008 Free Plug-ins (1): Style Cop'
 date: 2009-06-12 22:59:36.000000000 +01:00
 type: post
