--- a/_posts/2009-06-19-must-have-vs-2008-free-plug-ins-2-ghost-doc.html
+++ b/_posts/2009-06-19-must-have-vs-2008-free-plug-ins-2-ghost-doc.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: 'Must have VS 2008 Free Plug-ins (2): Ghost-Doc'
 date: 2009-06-19 22:29:39.000000000 +01:00
 type: post
