--- a/_posts/2009-06-26-introduction-to-microsoft-code-contracts-with-visual-studio-2008.html
+++ b/_posts/2009-06-26-introduction-to-microsoft-code-contracts-with-visual-studio-2008.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: Introduction to Microsoft Code Contracts with Visual Studio 2008
 date: 2009-06-26 15:16:35.000000000 +01:00
 type: post
