--- a/_posts/2009-08-13-more-visual-studio-2008-shortcuts-trasposing-characters-words-and-lines.html
+++ b/_posts/2009-08-13-more-visual-studio-2008-shortcuts-trasposing-characters-words-and-lines.html
@@ -1,9 +1,9 @@
 ---
-layout: post
+layout: single
 title: 'More Visual Studio 2008 Shortcuts: Trasposing Characters, Words and Lines'
 date: 2009-08-13 18:30:25.000000000 +01:00
 type: post
-published: true
+layout: single
 status: publish
 categories:
 - Tools
