--- a/_posts/2009-09-25-service-locator-pattern-in-csharpa-simple-example.html
+++ b/_posts/2009-09-25-service-locator-pattern-in-csharpa-simple-example.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: 'Service Locator Pattern in C#: A Simple Example'
 date: 2009-09-25 14:24:31.000000000 +01:00
 type: post
