--- a/_posts/2009-10-07-parsing-dates-from-csv-files-with-filehelpers-library.html
+++ b/_posts/2009-10-07-parsing-dates-from-csv-files-with-filehelpers-library.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: Parsing Dates from CSV files with FileHelpers Library
 date: 2009-10-07 22:08:37.000000000 +01:00
 type: post
