--- a/_posts/2009-10-13-service-locator-pattern-in-c-with-lazy-initialization.html
+++ b/_posts/2009-10-13-service-locator-pattern-in-c-with-lazy-initialization.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: Service Locator Pattern in C# with Lazy Initialization
 date: 2009-10-13 14:37:35.000000000 +01:00
 type: post
