--- a/_posts/2009-10-22-making-wcf-serializer-work-with-circular-references.html
+++ b/_posts/2009-10-22-making-wcf-serializer-work-with-circular-references.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: Making WCF Serializer Work with Circular References
 date: 2009-10-22 14:07:43.000000000 +01:00
 type: post
