--- a/_posts/2009-12-06-encapsulation-and-information-hiding.html
+++ b/_posts/2009-12-06-encapsulation-and-information-hiding.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: The Difference Between Encapsulation and Information Hiding
 date: 2009-12-06 22:01:24.000000000 +00:00
 type: post
