--- a/_posts/2010-06-14-project-euler-problem-1-and-2-in-f.html
+++ b/_posts/2010-06-14-project-euler-problem-1-and-2-in-f.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: Project Euler Problem 1 and 2 in F#
 date: 2010-06-14 13:30:45.000000000 +01:00
 type: post
