--- a/_posts/2010-09-02-file-transfer-with-wcf-part-iii.html
+++ b/_posts/2010-09-02-file-transfer-with-wcf-part-iii.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: 'File Transfer with WCF: Part III'
 date: 2010-09-02 14:08:55.000000000 +01:00
 type: post
