--- a/_posts/2011-05-25-code-snippets-for-the-dispose-pattern.html
+++ b/_posts/2011-05-25-code-snippets-for-the-dispose-pattern.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: Code Snippets for the Dispose Pattern
 date: 2011-05-25 16:08:34.000000000 +01:00
 type: post
