--- a/_posts/2011-07-16-whyfunctionalprogrammingmattersinfsharp.html
+++ b/_posts/2011-07-16-whyfunctionalprogrammingmattersinfsharp.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: Why Functional Programming Matters in F#
 date: 2011-07-16 19:46:12.000000000 +01:00
 type: post
