--- a/_posts/2014-08-10-book-review-version-control-with-git.html
+++ b/_posts/2014-08-10-book-review-version-control-with-git.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: 'Book Review: Version Control With Git'
 date: 2014-08-10 13:55:13.000000000 +01:00
 type: post
