--- a/_posts/2009-10-29-a-singleton-service-locator-pattern.html
+++ b/_posts/2009-10-29-a-singleton-service-locator-pattern.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: A Singleton Service Locator Pattern
 date: 2009-10-29 15:40:47.000000000 +00:00
 type: post
