--- a/_posts/2009-11-09-book-review-the-pragmatic-programmer.html
+++ b/_posts/2009-11-09-book-review-the-pragmatic-programmer.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: 'Book Review: The Pragmatic Programmer'
 date: 2009-11-09 12:05:26.000000000 +00:00
 type: post
