--- a/_posts/2010-01-22-see-your-xml-docs-as-you-type-with-cr-documentor.html
+++ b/_posts/2010-01-22-see-your-xml-docs-as-you-type-with-cr-documentor.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: See Your XML Docs As You Type With CR Documentor
 date: 2010-01-22 20:39:29.000000000 +00:00
 type: post
