--- a/_posts/2010-02-18-generics-with-type-uknown-at-compile-time.html
+++ b/_posts/2010-02-18-generics-with-type-uknown-at-compile-time.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: Generics With Type Uknown At Compile Time
 date: 2010-02-18 21:32:20.000000000 +00:00
 type: post
