--- a/_posts/2010-04-05-book-review-pragmatic-thinking-and-learning.html
+++ b/_posts/2010-04-05-book-review-pragmatic-thinking-and-learning.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: 'Book Review: Pragmatic Thinking And Learning'
 date: 2010-04-05 22:55:06.000000000 +01:00
 type: post
