--- a/_posts/2010-08-16-project-euler-problem-6-and-7-in-f.html
+++ b/_posts/2010-08-16-project-euler-problem-6-and-7-in-f.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: Project Euler Problem 6 and 7 in F#
 date: 2010-08-16 09:03:10.000000000 +01:00
 type: post
