--- a/_posts/2011-04-26-reading-technical-books-with-kindle-dx-2.html
+++ b/_posts/2011-04-26-reading-technical-books-with-kindle-dx-2.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: single
 title: Reading Technical Books with Kindle DX
 date: 2011-04-26 20:50:00.000000000 +01:00
 type: post
