Added descriptions to latest posts

--- a/_posts/2011-11-08-dependency-injection-for-dummies.html
+++ b/_posts/2011-11-08-dependency-injection-for-dummies.html
@@ -1,6 +1,7 @@
 ---
 layout: single
 title: Dependency Injection for Dummies
+description: A brief introduction to what Dependency Injection is in the context of Object Oriented design with examples in C#.
 date: 2011-11-08 10:10:31.000000000 +00:00
 type: post
 published: true
@@ -15,9 +16,7 @@ tags:
 - Design and Patterns
 - IoC
 meta:
-  _edit_last: '1'
   dsq_thread_id: '465214998'
-  wpsd_autopost: '1'
 ---
 <p><em><a href="http://codecriticon.com/">Antonio Vidal</a> has translated this post into Spanish: you can find it 
 <a href="http://codecriticon.com/dependencia-inyeccion-dummies/">here</a>.</em></p>
