--- a/_posts/2014-08-10-book-review-version-control-with-git.html
+++ b/_posts/2014-08-10-book-review-version-control-with-git.html
@@ -1,6 +1,7 @@
 ---
 layout: single
 title: 'Book Review: Version Control With Git'
+description: 'A review of the most complete book about GIT currently on the market'
 date: 2014-08-10 13:55:13.000000000 +01:00
 type: post
 published: true
@@ -9,13 +10,6 @@ categories:
 - Reviews
 tags: []
 meta:
-  _edit_last: '1'
-  _aioseop_description: A review of the most complete book about GIT currently on
-    the market.
-  _aioseop_title: 'Book Review: Version Control with GIT'
-  _wpas_done_all: '1'
-  wpsd_autopost: '1'
-  _aioseop_keywords: 'git, review, oreilly, '
   dsq_thread_id: '2915299429'
 ---
 <p><em>Your first encounter with GIT as a version control tool may be quite intimidating, especially if all you had been using so far was something simpler like Subversion, TFS or, God forbid, Visual Source Safe. "<a title="Version Control with GIT" href="http://shop.oreilly.com/product/0636920022862.do">Version Control with GIT</a>" by Jon Loeliger, Matthew McCullough (published by O'Reilly) leads you on a journey to become a master of the tool. But the path is not short and easy. If you need quick gratification, then you might have to look elsewhere.<br />
