Temporarily disable NDC london

--- a/_posts/2018-01-29-ndc-london-18.html
+++ b/_posts/2018-01-29-ndc-london-18.html
@@ -4,7 +4,7 @@ title: 'Notes NDC London 2018'
 description: 'Some notes from NDC London 2018'
 date: 2018-01-29 20:00:00.000000000 +01:00
 type: post
-published: true
+published: false 
 status: publish
 categories:
 - Reviews
